--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /.gradle/*
 /build/*
 /.idea/*
+/run
 
 # Compiled class file
 *.class
@@ -28,3 +29,5 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+.DS_Store
